Change the implementation of S3078 to cover more operations